# egressy

./: .dockerignore  .gitignore  .woodpecker.yml  AGENTS.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  README.md  SECURITY.md  compose.yaml
.github/workflows/: ci.yml  container.yml  pages.yml  policy.yml
ci/: migration-policy.sh
config/: client.compose.yaml  config.example.yaml  docker-api-proxy.cfg  docker-network.sh
docs/: API.md  ARCHITECTURE.md  CONFIGURATION.md  EXTERNAL_VALIDATION.md  INSTALLATION.md  NETWORKING.md  OPERATIONS.md  SECURITY.md  TESTING.md  WIREGUARD_PROFILE_MANAGEMENT.md
external-probe/: Dockerfile  README.md  external_probe_service.py  test_external_probe_service.py
openapi/: v2.json
src/: config.rs  control.rs  dns.rs  docker.rs  domain.rs  enforcement.rs  history.rs  host.rs  isolation.rs  main.rs  natpmp.rs  notifications.rs  probe.rs  profile_manager.rs  profiles.rs  recovery.rs  runtime.rs  state.rs  telemetry.rs  vpn_server.rs  web.rs  wireguard.rs
tests/: cli_integration.rs  docker-proxy-acl.sh  isolation-agent-nft.sh  nft-counter-preservation.sh  probe-network.sh  wireguard-netns.sh
tests/fixtures/: isolation-policy.json
tests/fixtures/wireguard/: mullvad-multihop.conf  mullvad.conf  proton.conf
ui/: index.html  package-lock.json  package.json  playwright.config.ts  vite.config.ts
ui/src/: App.test.tsx  App.tsx  NotificationsPanel.tsx  ProfilesPanel.tsx  ThroughputChart.tsx  api.ts  demo.ts  generated.ts  main.tsx  styles.css
ui/tests/: dashboard.spec.ts
