[package]
name = "egressy"
version = "0.1.0"
edition = "2021"
rust-version = "1.97"
license = "AGPL-3.0-only"
description = "Egressy, a transparent label-aware Docker VPN egress gateway"
default-run = "egressy"

[dependencies]
anyhow = "1.0"
axum = "0.8"
base64 = "0.22"
chacha20poly1305 = "0.10"
bollard = "0.21"
clap = { version = "4.5", features = ["derive", "env"] }
futures-util = "0.3"
ipnet = { version = "2.11", features = ["serde"] }
omnihook = "0.1.2"
opentelemetry = { version = "0.32", features = ["logs", "metrics", "trace"] }
opentelemetry-appender-tracing = "0.32"
opentelemetry-otlp = { version = "0.32", default-features = false, features = ["http-proto", "reqwest-blocking-client", "logs", "metrics", "trace", "tls-webpki-roots"] }
opentelemetry_sdk = { version = "0.32", features = ["logs", "metrics", "trace"] }
rand = "0.9"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
rusqlite = { version = "0.37", features = ["bundled"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
thiserror = "2.0"
tokio = { version = "1.48", features = ["full"] }
tokio-stream = { version = "0.1", features = ["sync"] }
tower-http = { version = "0.6", features = ["trace"] }
tracing = "0.1"
tracing-opentelemetry = "0.33"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
url = "2.5"
zeroize = { version = "1.8", features = ["derive"] }

[dev-dependencies]
tempfile = "3.23"
